[gd_scene load_steps=34 format=4 uid="uid://b3p2g5q2t6qqn"]

[ext_resource type="Script" path="res://scenes/puzzles/Puzzle3/puzzle.gd" id="1_j3a11"]
[ext_resource type="Script" path="res://scenes/puzzles/Puzzle1/simulation.gd" id="2_bcfa5"]
[ext_resource type="TileSet" uid="uid://g24mc763mfio" path="res://assets/tileset/urban_pack_teleset.tres" id="3_22j37"]
[ext_resource type="Texture2D" uid="uid://dph6iovic5te4" path="res://assets/ui/tiles/kenney_animal_pack/Round/elephant.png" id="4_dcnb3"]
[ext_resource type="Texture2D" uid="uid://3g286yqk1cv2" path="res://assets/ui/tiles/kenney_animal_pack/Round/giraffe.png" id="5_pyaau"]
[ext_resource type="Texture2D" uid="uid://ch4n0chcu4yhj" path="res://assets/ui/tiles/kenney_animal_pack/Round/hippo.png" id="6_sltag"]
[ext_resource type="Texture2D" uid="uid://smp8wpc05tb4" path="res://assets/ui/tiles/kenney_animal_pack/Round/monkey.png" id="7_md5w2"]
[ext_resource type="Texture2D" uid="uid://cmlxjuj5bmm4e" path="res://assets/ui/tiles/kenney_animal_pack/Round/panda.png" id="8_ep435"]
[ext_resource type="Texture2D" uid="uid://dxiqawppt6xb8" path="res://assets/ui/tiles/kenney_animal_pack/Round/parrot.png" id="9_xc051"]
[ext_resource type="Texture2D" uid="uid://b5cunigpjmi5q" path="res://assets/ui/tiles/kenney_animal_pack/Round/penguin.png" id="10_ojflv"]
[ext_resource type="Texture2D" uid="uid://csbojfyw2khm7" path="res://assets/ui/tiles/kenney_animal_pack/Round/pig.png" id="11_mkak8"]
[ext_resource type="Texture2D" uid="uid://c2wtpyf8p7b28" path="res://assets/ui/tiles/kenney_animal_pack/Round/snake.png" id="12_d6qpy"]
[ext_resource type="Texture2D" uid="uid://br6fuif06mku1" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/elephant.png" id="13_l3t7s"]
[ext_resource type="Texture2D" uid="uid://cxtq8yr6o5lxu" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/giraffe.png" id="14_uel7t"]
[ext_resource type="Texture2D" uid="uid://ber1mohasc8as" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/hippo.png" id="15_eoggh"]
[ext_resource type="Texture2D" uid="uid://cg6nvps5nl7sx" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/monkey.png" id="16_a6yxa"]
[ext_resource type="Texture2D" uid="uid://dmb6b0xjok41w" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/panda.png" id="17_pfx1v"]
[ext_resource type="Texture2D" uid="uid://dvjguw7eeao71" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/parrot.png" id="18_1fdnx"]
[ext_resource type="Texture2D" uid="uid://bnt5lcf4ltsns" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/penguin.png" id="19_wyf0a"]
[ext_resource type="Texture2D" uid="uid://cfia8ncw6ylge" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/pig.png" id="20_blncf"]
[ext_resource type="Texture2D" uid="uid://bvsjw4kmy7t8i" path="res://assets/ui/tiles/kenney_animal_pack/Round without details/snake.png" id="21_as356"]
[ext_resource type="FontFile" uid="uid://cb0ghp4306be5" path="res://assets/fonts/Kenney Pixel.ttf" id="22_jen5o"]
[ext_resource type="PackedScene" uid="uid://mevl074yrg3p" path="res://utils/query/queries.tscn" id="23_tk1rq"]
[ext_resource type="PackedScene" uid="uid://bixsneybrdam" path="res://scenes/ui/answer_hint/answer_hint.tscn" id="24_so55n"]
[ext_resource type="Script" path="res://scenes/ui/answer_animation/answer_animation.gd" id="25_xosde"]
[ext_resource type="FontFile" uid="uid://dx0leo3qtvu16" path="res://assets/fonts/Kenney Mini.ttf" id="26_1y7gq"]
[ext_resource type="Texture2D" uid="uid://bw43wkxxts0tb" path="res://assets/ui/icons/white/checkmark.png" id="27_jttkd"]
[ext_resource type="Texture2D" uid="uid://lrfylv7h1hm" path="res://assets/ui/icons/white/cross.png" id="28_6xogs"]
[ext_resource type="Texture2D" uid="uid://w3id45hgypk8" path="res://assets/ui/icons/white/star.png" id="29_3kedp"]

[sub_resource type="Animation" id="Animation_1qxr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.171102, 0.16935, 0.325803, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Star:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Star:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Star:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.672884, 0.127881, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Checkmark:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Button:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Cross:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_p04qr"]
resource_name = "correct_answer"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.172549, 0.168627, 0.32549, 0), Color(0.171102, 0.16935, 0.325803, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Star:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Star:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.5, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 3), Vector2(2, 2), Vector2(25, 25)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Star:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.672884, 0.127881, 1), Color(1, 0.67451, 0.129412, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Checkmark:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Button:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_nh0au"]
resource_name = "wrong_answer"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.172549, 0.168627, 0.32549, 0), Color(0.171102, 0.16935, 0.325803, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Star:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Star:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.5, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(3, 3), Vector2(2, 2), Vector2(25, 25)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Star:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.5, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.672884, 0.127881, 1), Color(1, 0.67451, 0.129412, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Button:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Cross:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tsjem"]
_data = {
"RESET": SubResource("Animation_1qxr4"),
"correct_answer": SubResource("Animation_p04qr"),
"wrong_answer": SubResource("Animation_nh0au")
}

[node name="Puzzle3" type="Node2D"]
script = ExtResource("1_j3a11")

[node name="BackgroundRect" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 960.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.488416, 0.359995, 0.666125, 1)
metadata/_edit_lock_ = true

[node name="Simulation" type="Node2D" parent="."]
script = ExtResource("2_bcfa5")

[node name="FadeRect" type="ColorRect" parent="Simulation"]
offset_right = 640.0
offset_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.404218, 0.418984, 0.590379, 1)
metadata/_edit_lock_ = true

[node name="TileMapLayers" type="Node2D" parent="Simulation"]

[node name="FloorLayer" type="TileMapLayer" parent="Simulation/TileMapLayers"]
texture_filter = 1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAANAAwAAAACABEAAAAOAAwAAAADABEAAAAOAA0AAAADABEAAAAOAA4AAAACAA8AAAAPAAwAAAAEABEAAAAPAA0AAAAHABEAAAAPAA4AAAABABAAAAAQAAwAAAALAAEAAAAQAA0AAAABAA8AAAAQAA4AAAABABAAAAARAAwAAAAMAAIAAAARAA0AAAAAAA8AAAARAA4AAAAAABAAAAASAAwAAAAMAAIAAAASAA0AAAABAA8AAAASAA4AAAABABAAAAATAA4AAAABABAAAAANAAsAAAACABEAAAAOAAsAAAADABEAAAAPAAsAAAAEABEAAAANAAoAAAACABEAAAAOAAoAAAADABEAAAAPAAoAAAAEABEAAAANAAkAAAACABEAAAAOAAkAAAADABEAAAAPAAkAAAAEABEAAAANAAgAAAACABEAAAAOAAgAAAADABEAAAAPAAgAAAAEABEAAAANAAcAAAACABEAAAAOAAcAAAADABEAAAAPAAcAAAAEABEAAAANAAYAAAACABEAAAAOAAYAAAADABEAAAAPAAYAAAAEABEAAAANAAUAAAACABEAAAAOAAUAAAADABEAAAAPAAUAAAAEABEAAAANAAQAAAAIABAAAAAOAAQAAAADABEAAAAPAAQAAAAEABEAAAANAAMAAAABABAAAAAOAAMAAAACAA8AAAAPAAMAAAAEABEAAAANAAIAAAAIABEAAAAOAAIAAAADABEAAAAPAAIAAAAEABEAAAANAAEAAAACABEAAAAOAAEAAAADABEAAAAPAAEAAAAEABEAAAANAAAAAAACABEAAAAOAAAAAAADABEAAAAPAAAAAAAEABEAAAAEAAcAAAAQAAAAAAAEAAgAAAAQAAEAAAAEAAkAAAAQAAIAAAAEAAoAAAAQAAMAAAALAAcAAAAQAAAAAAALAAgAAAAQAAEAAAALAAkAAAAQAAIAAAALAAoAAAAQAAMAAAAFAAgAAAAUAAIAAAAFAAkAAAAUAAEAAAAFAAoAAAAUAAMAAAAGAAgAAAAVAAIAAAAGAAkAAAASAAEAAAAGAAoAAAASAAMAAAAHAAgAAAAVAAIAAAAHAAkAAAASAAEAAAAHAAoAAAASAAMAAAAIAAgAAAAVAAIAAAAIAAkAAAASAAEAAAAIAAoAAAASAAMAAAAJAAgAAAAVAAIAAAAJAAkAAAASAAEAAAAJAAoAAAASAAMAAAAKAAgAAAAWAAIAAAAKAAkAAAAWAAEAAAAKAAoAAAAWAAMAAAAFAAcAAAAUAAAAAAAGAAcAAAASAAAAAAAHAAcAAAAVAAAAAAAIAAcAAAASAAAAAAAJAAcAAAASAAAAAAAKAAcAAAAWAAAAAAAEAAYAAAAAAAUAAAAFAAYAAAABAAUAAAAGAAYAAAABAAUAAAAHAAYAAAABAAUAAAAIAAYAAAABAAUAAAAJAAYAAAABAAUAAAAKAAYAAAABAAUAAAALAAYAAAACAAUAAAAEAAUAAAAAAAQAAAAEAAQAAAAAAAMAAAAFAAQAAAABAAMAAAAFAAUAAAABAAQAAAAGAAQAAAABAAMAAAAGAAUAAAABAAQAAAAHAAQAAAABAAMAAAAHAAUAAAABAAQAAAAIAAQAAAABAAMAAAAIAAUAAAABAAQAAAAJAAQAAAABAAMAAAAJAAUAAAABAAQAAAAKAAQAAAABAAMAAAAKAAUAAAABAAQAAAALAAQAAAACAAMAAAALAAUAAAACAAQAAAARAAcAAAARAAUAAAARAAgAAAARAAYAAAASAAcAAAASAAUAAAASAAgAAAASAAYAAAARAAkAAAAIAA4AAAASAAkAAAAJAA4AAAATAAkAAAAHAA8AAAATAAcAAAASAAUAAAATAAgAAAASAAYAAAARAAYAAAARAAQAAAASAAYAAAASAAQAAAATAAYAAAASAAQAAAARAAMAAAAIAAMAAAARAAQAAAAIAAQAAAARAAUAAAAIAAUAAAASAAMAAAAJAAMAAAASAAQAAAAJAAQAAAASAAUAAAAJAAUAAAATAAMAAAAJAAMAAAATAAQAAAAJAAQAAAATAAUAAAAJAAUAAAATAAwAAAAMAAIAAAATAA0AAAABAA8AAAAAAAsAAAAOAAUAAAABAAsAAAAJAAMAAAACAAsAAAAJAAMAAAADAAsAAAAJAAMAAAAEAAsAAAAJAAMAAAAFAAsAAAAOAAUAAAAHAAsAAAAMAAIAAAAIAAsAAAAMAAIAAAAJAAsAAAAMAAIAAAAKAAsAAAAMAAIAAAALAAsAAAANAAIAAAAMAAsAAAAPAAEAAAAQAAsAAAAPAAEAAAARAAsAAAAJAAEAAAASAAsAAAAJAAEAAAATAAsAAAAJAAEAAAAMAAoAAAAPAAEAAAAMAAkAAAAPAAEAAAAMAAgAAAAPAAEAAAAMAAcAAAAPAAEAAAAMAAYAAAAPAAEAAAAMAAUAAAAMAAAAAAAMAAEAAAAMAAEAAAADAAUAAAAMAAIAAAADAAYAAAAJAAEAAAADAAcAAAAJAAEAAAADAAgAAAAJAAIAAAADAAkAAAABAAEAAAADAAoAAAABAAEAAAACAAoAAAABAAEAAAABAAoAAAABAAEAAAABAAkAAAABAAEAAAABAAgAAAAJAAIAAAACAAgAAAAJAAIAAAACAAcAAAAJAAEAAAACAAYAAAAJAAEAAAACAAUAAAAMAAIAAAABAAUAAAAMAAIAAAACAAkAAAABAAEAAAAAAAoAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAAJAAIAAAAAAAcAAAAJAAEAAAAAAAYAAAAJAAEAAAAAAAUAAAAMAAIAAAABAAYAAAAJAAEAAAABAAcAAAAJAAEAAAAFAAEAAAAMAAIAAAAEAAEAAAAMAAIAAAADAAEAAAAMAAIAAAACAAEAAAAMAAIAAAAAAAEAAAAMAAIAAAABAAEAAAAMAAIAAAABAAAAAAABAAEAAAACAAAAAAABAAEAAAAAAAAAAAABAAEAAAAHAAEAAAAMAAIAAAAGAAEAAAAMAAIAAAAIAAEAAAAMAAIAAAAJAAEAAAAMAAIAAAAKAAEAAAAMAAIAAAALAAEAAAAMAAIAAAALAAAAAAABAAEAAAAMAAAAAAAPAAEAAAAKAAAAAAABAAEAAAAJAAAAAAABAAEAAAAIAAAAAAABAAEAAAAHAAAAAAABAAEAAAAGAAAAAAABAAEAAAAFAAAAAAABAAEAAAAEAAAAAAABAAEAAAADAAAAAAABAAEAAAAQAAoAAAAPAAEAAAAQAAkAAAAPAAEAAAAQAAgAAAAPAAEAAAAQAAcAAAAPAAEAAAAQAAYAAAAPAAEAAAAQAAUAAAAPAAEAAAAQAAQAAAAPAAEAAAAQAAMAAAAPAAEAAAAQAAIAAAAPAAEAAAAQAAEAAAAPAAEAAAAQAAAAAAALAAAAAAARAAIAAAAJAAEAAAASAAIAAAAJAAEAAAATAAIAAAAJAAEAAAATAAEAAAAJAAEAAAASAAEAAAAJAAEAAAARAAEAAAAJAAEAAAARAAAAAAAMAAIAAAASAAAAAAAMAAIAAAATAAAAAAAMAAIAAAARAAoAAAAJAAEAAAASAAoAAAAJAAEAAAATAAoAAAAJAAEAAAAAAA8AAAABABEAAAABAA8AAAABABEAAAACAA8AAAABABEAAAADAA8AAAABABEAAAAEAA8AAAABABEAAAAFAA8AAAABABEAAAAGAA8AAAABABEAAAAHAA8AAAABABEAAAAIAA8AAAABABEAAAAJAA8AAAABABEAAAANAA8AAAABABEAAAAOAA8AAAABABEAAAAPAA8AAAABABEAAAAQAA8AAAABABEAAAARAA8AAAAAABEAAAASAA8AAAABABEAAAATAA8AAAABABEAAAAAAAIAAAABAA8AAAAAAAMAAAABABAAAAAAAAQAAAABABEAAAABAAIAAAABAA8AAAABAAMAAAABABAAAAABAAQAAAABABEAAAACAAIAAAABAA8AAAACAAMAAAABABAAAAACAAQAAAABABEAAAADAAIAAAABAA8AAAADAAMAAAABABAAAAADAAQAAAABABEAAAAEAAIAAAABAA8AAAAEAAMAAAABABAAAAAFAAIAAAABAA8AAAAFAAMAAAABABAAAAAGAAIAAAABAA8AAAAGAAMAAAABABAAAAAHAAIAAAABAA8AAAAHAAMAAAABABAAAAAIAAIAAAABAA8AAAAIAAMAAAABABAAAAAJAAIAAAABAA8AAAAJAAMAAAABABAAAAAKAAIAAAABAA8AAAAKAAMAAAABABAAAAALAAIAAAABAA8AAAALAAMAAAABABAAAAAMAAIAAAABAA8AAAAMAAMAAAABABAAAAAMAAQAAAABABEAAAAMAAwAAAAPAAEAAAAMAA0AAAAPAAEAAAAMAA4AAAAPAAEAAAALAAwAAAABAAEAAAALAA0AAAABAAEAAAALAA4AAAABAAEAAAAKAA4AAAABAAEAAAAJAA4AAAABAAEAAAAAAA0AAAAOAAUAAAABAA0AAAAJAAUAAAACAA0AAAAJAAUAAAAAAAwAAAAJAAQAAAABAAwAAAAJAAQAAAACAAwAAAAJAAQAAAADAAwAAAAJAAQAAAAEAAwAAAAJAAQAAAAFAAwAAAAKAAQAAAAHAAwAAAABAAEAAAAIAAwAAAABAAEAAAAJAAwAAAABAAEAAAAKAAwAAAABAAEAAAAKAA0AAAABAAEAAAAJAA0AAAABAAEAAAAIAA0AAAABAAEAAAAHAA0AAAABAAEAAAAFAA0AAAAOAAUAAAAEAA0AAAAJAAUAAAADAA0AAAAJAAUAAAANAA0AAAACABEAAAANAA4AAAACABEAAAAFAA4AAAAQAAQAAAAEAA4AAAASAAQAAAADAA4AAAASAAQAAAACAA4AAAASAAQAAAABAA4AAAASAAQAAAAAAA4AAAAQAAQAAAAGAAsAAAAMAAIAAAAGAAwAAAABAAEAAAAGAA0AAAABAAEAAAAGAA4AAAABAAEAAAAHAA4AAAABAAEAAAAIAA4AAAABAAEAAAA=")
tile_set = ExtResource("3_22j37")
metadata/_edit_lock_ = true

[node name="PropsLayer" type="TileMapLayer" parent="Simulation/TileMapLayers"]
texture_filter = 1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAARAAkAAAAEAAwAAAASAAkAAAAFAAwAAAATAAkAAAAFAAwAAAADAAgAAAAFAA4AAAACAAgAAAAFAA4AAAABAAgAAAAFAA4AAAAAAAgAAAAFAA4AAAAHAAoAAAAHAA8AAAAIAAoAAAAIAA8AAAALAAgAAAANAA8AAAALAAkAAAAOABEAAAAEAAkAAAAOABEAAAAEAAgAAAANAA8AAAAGAAgAAAANABAAAAAJAAgAAAANABAAAAAKAAcAAAAKAAwAAAAKAAoAAAAMABEAAAAFAAoAAAAMABEAAAACAAsAAAADAA4AAAADAAkAAAADAAwAAAASAAgAAAAMAA4AAAASAAYAAAALAA0AAAASAAcAAAALAA4AAAALAAAAAAAKAAsAAAALAAsAAAAJAAoAAAANAAEAAAAFAAkAAAAFAAcAAAAKAAwAAAASAAQAAAAJAAwAAAAEAAwAAAAJAAwAAAAFAAEAAAAPAA4AAAAFAAIAAAAPAA8AAAAGAAEAAAAQAA4AAAAGAAIAAAAQAA8AAAAPAAYAAAAWAA4AAAAPAAcAAAAWAA8AAAACAAMAAAASAA4AAAACAAQAAAASAA8AAAADAAMAAAATAA4AAAADAAQAAAATAA8AAAANAAgAAAARABAAAAANAAkAAAARABEAAAAPAAoAAAAUAA4AAAAPAAsAAAAUAA8AAAARAAAAAAAFAAgAAAAIAA4AAAALAAcAAAAJAA4AAAAMAAcAAAAIAA0AAAALAAYAAAAJAA0AAAAMAAYAAAAAAAkAAAAQAAgAAAAAAAoAAAAQAAkAAAAMAAEAAAACAAcAAAAQAAEAAAACAAcAAAAMAAAAAAADAA8AAAAQAAAAAAAFAA8AAAAQAAsAAAAGAA8AAAAQAAwAAAACAAcAAAARAAwAAAAPABAAAAARAA0AAAAPABEAAAASAAwAAAAQABAAAAASAA0AAAAQABEAAAAQAAMAAAAEAA8AAAAQAAQAAAACAAcAAAAPAAEAAAABAAoAAAAGAA0AAAADAA0AAAAGAA4AAAADAA0AAAA=")
tile_set = ExtResource("3_22j37")
metadata/_edit_lock_ = true

[node name="People" type="Node2D" parent="Simulation"]

[node name="Douglas" type="Sprite2D" parent="Simulation/People"]
position = Vector2(24, 30)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_dcnb3")

[node name="Garry" type="Sprite2D" parent="Simulation/People"]
position = Vector2(400, 208)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_pyaau")

[node name="Henry" type="Sprite2D" parent="Simulation/People"]
position = Vector2(88, 376)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_sltag")

[node name="Milo" type="Sprite2D" parent="Simulation/People"]
position = Vector2(119, 30)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_md5w2")

[node name="Perry" type="Sprite2D" parent="Simulation/People"]
position = Vector2(112, 240)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_ep435")

[node name="Percy" type="Sprite2D" parent="Simulation/People"]
position = Vector2(248, 400)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_xc051")

[node name="Paul" type="Sprite2D" parent="Simulation/People"]
position = Vector2(40, 392)
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_ojflv")

[node name="Peter" type="Sprite2D" parent="Simulation/People"]
position = Vector2(56, 304)
scale = Vector2(0.1, 0.1)
texture = ExtResource("11_mkak8")

[node name="Sven" type="Sprite2D" parent="Simulation/People"]
position = Vector2(269, 31)
scale = Vector2(0.1, 0.1)
texture = ExtResource("12_d6qpy")

[node name="Ella" type="Sprite2D" parent="Simulation/People"]
position = Vector2(360, 448)
scale = Vector2(0.1, 0.1)
texture = ExtResource("13_l3t7s")

[node name="Gemma" type="Sprite2D" parent="Simulation/People"]
position = Vector2(336, 400)
scale = Vector2(0.1, 0.1)
texture = ExtResource("14_uel7t")

[node name="Holly" type="Sprite2D" parent="Simulation/People"]
position = Vector2(56, 200)
scale = Vector2(0.1, 0.1)
texture = ExtResource("15_eoggh")

[node name="Maya" type="Sprite2D" parent="Simulation/People"]
position = Vector2(608, 344)
scale = Vector2(0.1, 0.1)
texture = ExtResource("16_a6yxa")

[node name="Penny" type="Sprite2D" parent="Simulation/People"]
position = Vector2(96, 328)
scale = Vector2(0.1, 0.1)
texture = ExtResource("17_pfx1v")

[node name="Penna" type="Sprite2D" parent="Simulation/People"]
position = Vector2(576, 384)
scale = Vector2(0.1, 0.1)
texture = ExtResource("18_1fdnx")

[node name="Polly" type="Sprite2D" parent="Simulation/People"]
position = Vector2(496, 232)
scale = Vector2(0.1, 0.1)
texture = ExtResource("19_wyf0a")

[node name="Pippa" type="Sprite2D" parent="Simulation/People"]
position = Vector2(400, 264)
scale = Vector2(0.1, 0.1)
texture = ExtResource("20_blncf")

[node name="Sasha" type="Sprite2D" parent="Simulation/People"]
position = Vector2(592, 64)
scale = Vector2(0.1, 0.1)
texture = ExtResource("21_as356")

[node name="ColorRect" type="ColorRect" parent="Simulation"]
offset_left = 32.0
offset_top = 408.0
offset_right = 608.0
offset_bottom = 448.0
color = Color(0.43134, 0.43134, 0.43134, 0.717647)

[node name="Goal" type="Label" parent="Simulation"]
offset_left = 40.0
offset_top = 400.0
offset_right = 584.0
offset_bottom = 448.0
theme_override_colors/font_shadow_color = Color(0.187176, 0.187176, 0.187176, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("22_jen5o")
theme_override_font_sizes/font_size = 40
text = "GOAL: Query the only male Elephant!"
vertical_alignment = 1

[node name="BottomScreen" type="Node2D" parent="."]

[node name="Queries" parent="BottomScreen" instance=ExtResource("23_tk1rq")]
offset_top = 480.0
offset_bottom = 960.0
database_path = "res://scenes/puzzles/Puzzle1/data.db"

[node name="AnswerHint" parent="BottomScreen" instance=ExtResource("24_so55n")]
visible = false
position = Vector2(0, 472)

[node name="AnswerAnimation" type="Node2D" parent="."]
script = ExtResource("25_xosde")

[node name="ColorRect" type="ColorRect" parent="AnswerAnimation"]
visible = false
offset_right = 640.0
offset_bottom = 960.0
color = Color(0.171102, 0.16935, 0.325803, 1)
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="AnswerAnimation"]
visible = false
offset_left = 232.0
offset_top = 600.0
offset_right = 408.0
offset_bottom = 680.0
theme_override_fonts/font = ExtResource("26_1y7gq")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="Checkmark" type="Sprite2D" parent="AnswerAnimation"]
visible = false
modulate = Color(1.31397e-05, 0.791293, 0.174296, 1)
position = Vector2(320, 408)
scale = Vector2(4, 4)
texture = ExtResource("27_jttkd")

[node name="Cross" type="Sprite2D" parent="AnswerAnimation"]
visible = false
modulate = Color(0.817768, 0, 0.146844, 1)
position = Vector2(320, 408)
scale = Vector2(4, 4)
texture = ExtResource("28_6xogs")

[node name="Star" type="Sprite2D" parent="AnswerAnimation"]
visible = false
modulate = Color(1, 0.672884, 0.127881, 1)
position = Vector2(320, 408)
scale = Vector2(4, 4)
texture = ExtResource("29_3kedp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnswerAnimation"]
libraries = {
"": SubResource("AnimationLibrary_tsjem")
}

[connection signal="answer" from="BottomScreen/Queries" to="." method="_on_queries_answer"]
[connection signal="pressed" from="BottomScreen/AnswerHint" to="." method="_on_answer_hint_pressed"]
[connection signal="pressed" from="AnswerAnimation" to="." method="_on_answer_animation_pressed"]
[connection signal="pressed" from="AnswerAnimation/Button" to="AnswerAnimation" method="_on_button_pressed"]
